--- a/calculator.css
+++ b/calculator.css
@@ -1,14 +1,67 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+}
+
+#titleText {
+    font-size: 50px;
+}
+
 #resultText {
     font-weight: bold;
     font-size: 32px;
 }
 
+.calcSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    background-color: black;
+    padding: 16px;
+    width: 380px;
+}
+
+.textSection {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 7px;
+    background-color: rgba(118, 130, 110, 0.891);
+    height: 56px;
+    width: 350px;
+    padding: 14px;
+    border: 2px solid black;
+}
+
+.btnSection {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 4px;
+    width: 350px;
+}
+
 .calButton {
-    width: 64px;
-    height: 64px;
+    width: 84px;
+    height: 84px;
     color: white;
     background-color: #474747;
     font-weight: bolder;
-    font-size: 24px;
+    font-size: 32px;
     border-radius: 20%;
+}
+
+.ctrlBtn {
+    background-color: gray;
+}
+
+.operBtn {
+    background-color: orange;
 }
